<resources>
    <string name="app_name">CropDiary</string>
    <string name="slogan">Control your crops like an expert with CropDiary: Your ally in farm accounting</string>
    <string name="error">Error</string>
    <string name="accept">Accept</string>
    <string name="succes">Succes</string>
    <string name="you_dont_have_an_internet_connection">You don\'t have an internet connection</string>
    <string name="prefs_file" translatable="false">com.example.cropdiary.PREFERENCE_FILE_KEY</string>
    <string name="email_pref" translatable="false">email</string>
    <string name="provider_pref" translatable="false">provider</string>
    //Strings Auth
    <string name="sing_in_with_google">Sing In With Google</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="you_must_enter_the_email">You must enter the mail</string>
    <string name="you_must_enter_the_password">You must enter the password</string>
    <string name="you_must_repeat_the_password">You must repeat the password</string>
    <string name="you_must_enter_a_valid_email">You must enter a valid email</string>
    <string name="the_password_must_be_at_least_8_digits">Password must be at least 8 digits</string>
    <string name="password_must_have_at_least_one_digit_and_one_uppercase_letter">Password must have at least one digit and one uppercase letter</string>
    <string name="an_error_ocurred_authenticating_the_user">An error occurred authenticating the user</string>
    <string name="there_is_no_user_with_this_email">There is no user with this email</string>
    <string name="email_already_in_use">Email already in use</string>
    <string name="recovery_password">Recovery password</string>
    <string name="wrong_password">Wrong password</string>
    <string name="we_have_sent_an_email_to_reset_your_password">We have sent an email to reset your password</string>


</resources>