<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.Auth.SignInFragment">


    <EditText
        android:id="@+id/edTxEmailAddressSignIn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/edTxPasswordSignIn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edTxPasswordSignIn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/tvForgotPassword"
        app:layout_constraintEnd_toEndOf="@+id/edTxEmailAddressSignIn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/edTxEmailAddressSignIn"
        app:layout_constraintTop_toBottomOf="@+id/edTxEmailAddressSignIn" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_your_password"
        android:textColor="@color/secondary_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@id/btnSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edTxPasswordSignIn" />

    <Button
        android:id="@+id/btnSign"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_medium"
        android:backgroundTint="@color/secondary_dark"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@+id/tvDontHaveAccount"
        app:layout_constraintEnd_toStartOf="@+id/btnSignInWithGoogle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

    <Button
        android:id="@+id/btnSignInWithGoogle"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/btn_large"
        android:backgroundTint="@color/white"
        android:drawableStart="@drawable/icon_google"
        android:paddingStart="10dp"
        android:text="@string/sing_in_with_google"
        app:layout_constraintBottom_toBottomOf="@id/btnSign"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/btnSign"
        app:layout_constraintTop_toTopOf="@id/btnSign"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/tvDontHaveAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="Don't have an account? "
        android:textColor="@color/primary_text_black"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvSignUp"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnSign" />

    <TextView
        android:id="@+id/tvSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/secondary_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvDontHaveAccount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/tvDontHaveAccount"
        app:layout_constraintTop_toTopOf="@+id/tvDontHaveAccount" />

    <ProgressBar
        android:id="@+id/progressBarSignIn"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>